<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrillListActivity"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/instructions_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="@string/drillListInstructions"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/list_view_layout"
            app:layout_constraintVertical_chainStyle="spread_inside"
            />

        <ListView
            android:id="@+id/list_view_layout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/instructions_layout"
            app:layout_constraintBottom_toTopOf="@id/edit_constraint_layout">
        </ListView>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/edit_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_button"
            app:layout_constraintBottom_toTopOf="@id/next_button_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/list_view_layout">

            <Button
                android:id="@+id/create_button_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="createList"
                android:text="@string/create_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/edit_list_button_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/edit_list_button_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="editSelectedList"
                android:text="@string/edit_button"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/create_button_layout"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>



        <Button
            android:id="@+id/next_button_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="40dp"
            android:onClick="goToRoutine"
            android:text="@string/next_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/edit_constraint_layout"
            app:layout_constraintVertical_weight="1" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>